--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,10 @@ footer{
         text-align: center;
     } 
 
+    .nav__link:hover{
+        color: #ffd031;
+    }
+
     .nav__item{
         margin: 0 0 0 1.5rem;
     }
